@@ -178,8 +178,8 @@ soundcard=none
 #LCD Panel addon
 lcdpanel=none
 
-#Prefer IPversion (for: apt-get) | auto (let system decide) / ipv4 (force) / ipv6 (force) | eg: force IPv4 with prefer_ipversion=ipv4
-prefer_ipversion=auto
+#Prefer IPversion (for: APT) | auto (let system decide) / ipv4 (force) / ipv6 (force) | eg: force IPv4 with prefer_ipversion=ipv4
+prefer_ipversion=ipv4
 
 #Apt mirrors which are applied to /etc/apt/sources.list | Values here will also be applied during 1st run setup
 #	Raspbian = https://www.raspbian.org/RaspbianMirrors
