@@ -366,7 +366,7 @@ _EOF_
 	#-----------------------------------------------------------------------------------
 	#Network
 
-	G_DIETPI-NOTIFY 2 "Configuring: Prefer wlan/eth naming for networked devices:"
+	G_DIETPI-NOTIFY 2 "Configuring: prefer wlan/eth naming for networked devices:"
 
 	# - Prefer to use wlan/eth naming for networked devices (eg: stretch)
 	ln -sf /dev/null /etc/systemd/network/99-default.link
@@ -379,6 +379,14 @@ _EOF_
 		update-grub
 
 	fi
+
+	G_DIETPI-NOTIFY 2 "Configuring: prefer IPv4 (wget):"
+
+	sed -i '/prefer-family =/c\prefer-family = IPv4' /etc/wgetrc
+
+	G_DIETPI-NOTIFY 2 "Configuring: force IPv4 (APT):"
+
+	echo 'Acquire::ForceIPv4 "true";' > /etc/apt/apt.conf.d/99force-ipv
 
 	#-----------------------------------------------------------------------------------
 	#MISC
