@@ -2971,12 +2971,16 @@ _EOF_
 		fi
 		#-------------------------------------------------------------------------------
 		#FHS changes: https://github.com/Fourdee/DietPi/issues/1297
+		#	APT now IPv4 forced:
+		# - Update core ENV
+		sed -i '/prefer_ipversion=/c\Sprefer_ipversion=ipv4' /DietPi/dietpi.txt
 		/DietPi/dietpi/func/dietpi-set_core_environment
 
 		# - DietPi-autostart custom script moved
 		mkdir -p /var/lib/dietpi/dietpi-autostart &> /dev/null
 		mv /etc/dietpi/autostart.sh /var/lib/dietpi/dietpi-autostart/custom.sh &> /dev/null
 		#-------------------------------------------------------------------------------
+
 
 	fi
 
